--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
     <title>WPU - Belajar REST API</title>
+    <meta name="description" content="Hasil implementasi dari Playlist WPU - Rest API">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <h1 class="text-center mt-3">Selamat Datang!</h1>
@@ -20,14 +17,12 @@
     <div class="row justify-content-center">
         <div class="col-lg-5">
             <ul class="list-group">
-                <li class="list-group-item text-center"><a href="https://gifaldyazkaa.github.io/wpu-belajar-rest-api/wpu-hut/">#4 - Bekerja Dengan JSON - WPU Hut</a></li>
-                <li class="list-group-item text-center"><a href="https://gifaldyazkaa.github.io/wpu-belajar-rest-api/wpu-movie/">#5 - Apa itu Public API - WPU Movie</a></li>
+                <li class="list-group-item text-center"><a href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-hut/">#4 - Bekerja Dengan JSON - WPU Hut</a></li>
+                <li class="list-group-item text-center"><a href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-movie/">#5 - Apa itu Public API - WPU Movie</a></li>
             </ul>
         </div>
     </div>
     
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
  </body>
 </html>
