--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>WPU - Belajar REST API</title>
-    <meta name="description" content="Hasil implementasi dari Playlist WPU - Rest API">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta
+      name="description"
+      content="Hasil implementasi dari Playlist WPU - Rest API"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1 class="text-center mt-3">Selamat Datang!</h1>
-    <p class="text-center mt-2">Selamat datang di Website WPU - Belajar REST API!</p>
+    <p class="text-center mt-2">
+      Selamat datang di Website WPU - Belajar REST API!
+    </p>
 
-    <p class="text-center mt-4">Ini adalah Hasil Implementasi dari Hasil Belajar REST API Di WPU / Web Programming UNPAS.</p>
+    <p class="text-center mt-4">
+      Ini adalah Hasil Implementasi dari Hasil Belajar REST API Di WPU / Web
+      Programming UNPAS.
+    </p>
     <p class="text-center mt-2">Hasil yang Baru saya Implementasikan</p>
 
     <div class="row justify-content-center">
-        <div class="col-lg-5">
-            <ul class="list-group">
-                <li class="list-group-item text-center"><a href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-hut/">#4 - Bekerja Dengan JSON - WPU Hut</a></li>
-                <li class="list-group-item text-center"><a href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-movie/">#5 - Apa itu Public API - WPU Movie</a></li>
-            </ul>
-        </div>
+      <div class="col-lg-5">
+        <ul class="list-group">
+          <li class="list-group-item text-center">
+            <a href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-hut/"
+              >#4 - Bekerja Dengan JSON - WPU Hut</a
+            >
+          </li>
+          <li class="list-group-item text-center">
+            <a
+              href="https://gifaldyazka.is-a.dev/wpu-belajar-rest-api/wpu-movie/"
+              >#5 - Apa itu Public API - WPU Movie</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
- </body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    ></script>
+  </body>
 </html>
